fix search box and button alignment in footer.

--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ Tags:
 		min-height:19px;
 		border-radius:0;
 		width:160px;
+		vertical-align:middle;
 	}
 
 	.searchform input[type="image"] {
